--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,9 +14,9 @@
 }
 
 .navbar-inner {
-  max-width: 1240px;
+  max-width: 1060px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 2.5rem;
   height: 68px;
   display: flex;
   align-items: center;
